--- a/index.html
+++ b/index.html
@@ -538,17 +538,17 @@ URI     : https://colorlib.com
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 text-center text-lg-left">
-                    <p class="mb-2"> <span class="ti-location-pin mr-2"></span> 1485 Pacific St, Brooklyn, NY 11216 USA
+                    <p class="mb-2"> <span class="ti-location-pin mr-2"></span> Los Mochis, Sinaloa
                     </p>
                     <div class=" d-block d-sm-inline-block">
                         <p class="mb-2">
                             <span class="ti-email mr-2"></span> <a class="mr-4"
-                                href="mailto:support@mobileapp.com">support@mobileapp.com</a>
+                                href="mailto:support@mobileapp.com">L17440354@mochis.tecnm.mx</a>
                         </p>
                     </div>
                     <div class="d-block d-sm-inline-block">
                         <p class="mb-0">
-                            <span class="ti-headphone-alt mr-2"></span> <a href="tel:51836362800">518-3636-2800</a>
+                            <span class="ti-headphone-alt mr-2"></span> <a href="tel:51836362800">6681123459</a>
                         </p>
                     </div>
 
